# docs/swagger.yaml
@@ -174,6 +174,18 @@ paths:
       summary: BulkUpdate bulk update products
       tags:
       - Products API
+  /products/upload/csv:
+    post:
+      description: UploadProductCSV upload product from given csv file to server
+      parameters:
+      - description: csv
+        in: formData
+        name: csv
+        type: file
+      responses: {}
+      summary: UploadProductCSV upload product from given csv file to server
+      tags:
+      - Products API
   /search:
     get:
       consumes:
